--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
   </div>
 
   <div class="hidden lg:flex items-center gap-6 text-sm font-medium text-gray-600">
-    <a href="{{ url_for('LandingPage') }}" class="px-3 py-2 rounded-md transition duration-200 hover:text-white hover:bg-teal-500 hover:scale-105">Home</a>
+    <a href="{{ url_for('index') }}" class="px-3 py-2 rounded-md transition duration-200 hover:text-white hover:bg-teal-500 hover:scale-105">Home</a>
     <a href="{{ url_for('view_hospital') }}" class="px-3 py-2 rounded-md transition duration-200 hover:text-white hover:bg-teal-500 hover:scale-105">Manage Hospitals</a>
     <a href="{{ url_for('view_beds') }}" class="px-3 py-2 rounded-md transition duration-200 hover:text-white hover:bg-teal-500 hover:scale-105">Beds</a>
     <a href="{{ url_for('view_blood_banks') }}" class="px-3 py-2 rounded-md transition duration-200 hover:text-white hover:bg-teal-500 hover:scale-105">Blood Banks</a>
